add simple error for 400s
